[BUGFIX] Remove massive gap around code-blocks
resolves https://github.com/TYPO3-Documentation/render-guides/issues/509

--- a/packages/typo3-docs-theme/assets/sass/components/_code.scss
+++ b/packages/typo3-docs-theme/assets/sass/components/_code.scss
@@ -9,7 +9,7 @@ code {
  */
 .code-block {
     margin-bottom: 0;
-    padding: 75%;
+    padding: .75rem;
 
     & [data-line-number]::before {
         color: $gray-600;
