--- a/packages/typo3-docs-theme/resources/public/css/theme.css
+++ b/packages/typo3-docs-theme/resources/public/css/theme.css
@@ -23043,7 +23043,7 @@ code {
  */
 .code-block {
   margin-bottom: 0;
-  padding: 75%;
+  padding: 0.75rem;
 }
 .code-block [data-line-number]::before {
   color: #999999;
